[package]
name = "smtpspammer"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
lettre = { version = "0.11", features = ["smtp-transport", "native-tls", "builder"] }
dirs = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
